# featpp

./: .gitignore  LICENSE  README.md  env.py  featpp  settings.json  setup.cfg  test.py  variables.json
.github/workflows/: python-app.yml
src/: env.py  variables.json
src/featpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/isolate/: info_autorisations_sudo.txt  info_setup.txt  info_usage.txt  isolate.py  isolate_call.sh
src/main/: evaluate.py  main.py  progress.py  runtests.py  send.py  setup.py  shut.py  start.py  utility.py  variables.json  variables.py
src/main/resource/: retours.txt
src/main/resource/help/: help.py  help.txt
src/main/resource/project_sample/: config.py
src/outils/: variables.py
src/scenarios/: Scenario.py
src/scenarios/results/: BlackboxResult.py  JavaCompilerResult.py  Penalty.py  Result.py  ToolResult.py
src/scenarios/tools/: Blackbox.py  JavaCompiler.py  Junit.py
src/utils/: ProjectEnv.py  utility.py
tests/: testsRunner.py
tests/integration/Allumettes/: AllumettesTest.py
tests/unitaires/: unitaire.py
tests/unitaires/main/: CycleTeacherTest.py  CycleTest.py  MainTest.py  MillTest.py  ProgressTest.py  ProgressTest2.py  ProgressTest3.py  ProgressTest4.py  ProjectEnvTest.py  RuntestsTest.py  SetupTest.py  SetupTest2.py  SetupTest3.py  SetupTest4.py  StartUpTest.py  UtilityDataProviders.py  UtilityTest.py  UtilityTest2.py  database_test.db  test.py
tests/unitaires/scenarios/: ScenarioTest.py
tests/unitaires/temp/: retour.txt
tests/unitaires/utils/: TypeAnnotationTest.py
(+62 files in other folders)
