[metadata]
name = featpp
version = 0.0.1
author = Geoffrey MARTY
author_email = geoffreyakbar@gmail.com
description = Un framework pour tester les codes de vos élèves.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geoffreyakb/featpp.git
project_urls =
    Bug Tracker = https://github.com/geoffreyakb/featpp.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src